infra/k8s/synapseiq-enrichment-collector/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapseiq-enrichment-collector
spec:
  selector:
    app: synapseiq-enrichment-collector
  ports:
    - name: http
      port: 8802
      targetPort: 8802
